--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "MaximilianHeidenreich <github@maximilian-heidenreich.de>",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "lint": "eslint -c .eslintrc.js src",
     "start": "node src/index.js",
-    "build": "",
+    "build": "exit 0",
     "prepare": "yarn run build",
     "prepublishOnly": "yarn run lint",
     "preversion": "yarn run lint",
