--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.4.1",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^7.12.0"
