--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "express-validator": "^6.6.1",
     "pg": "^8.4.1",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
