--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "snipp-api",
   "version": "1.0.0",
-  "repository": "",
+  "homepage": "https://snipp.maximilian-heidenreich.de/about",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/MaximilianHeidenreich/Snipp-api.git"
+  },
   "author": "MaximilianHeidenreich <github@maximilian-heidenreich.de>",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "GPL-3.0-or-later",
   "engines": {
     "node": "12.x"
